blog/blog.css
@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");

:root {
  --outline: #efc69b;
  --primary-color: #af1b3f;
  --secondary-color: #473144;
  --body-font: Helvetica, Arial, sans-serif;
  --headline-font: "Lora", Impact, serif;
}

body {
  margin: 0;
  padding: 0;
}
header h1 {
  color: var(--secondary-color);
  font-family: var(--headline-font);
  text-align: center;
  padding: 15px;
}
nav a {
  text-decoration: none;
  color: var(--primary-color);
  font-family: var(--body-font);
  font-size: 1.5em;
  padding: 5px;
}
nav {
  outline: 2px solid var(--outline);
  text-align: right;
  padding: 15px;
}
header {
  padding-bottom: 15px;
}
.book-review,
.book-info p,
.filters {
  font-family: var(--body-font);
  color: var(--secondary-color);
}
.book-info h2 {
  font-family: var(--headline-font);
  color: var(--primary-color);
}
#grid {
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto auto;
  column-gap: 15px;
}
.magyk-review {
  grid-column: 1/2;
  margin-left: 15px;
}
.magyk-info {
  grid-column: 2/3;
}
.magnus-review {
  grid-column: 1/2;
  margin-left: 15px;
}
.mangus-info {
  grid-column: 2/3;
}
.filters {
  outline: 2px solid var(--outline);
  grid-column: 3/4;
  grid-row: 1/3;
  padding: 10px;
  margin-right: 15px;
}
.skiptocontent a {
  position: absolute;
  left: -9999px;
  background-color: red;
  color: yellow;
}
.skiptocontent a:focus {
  left: 0;
}

